chore: fix vite hmr compatibility with windows

--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "Modèle de base pour commencer un projet avec Husky, ESLint, Prettier, Typescript React Vite et Vitest",
   "main": "index.js",
   "scripts": {
-    "docker:build:dev": "docker-compose -f docker-compose.dev.yml build",
-    "docker:start:dev": "docker-compose -f docker-compose.dev.yml up",
+    "docker:start:dev": "docker-compose -f docker-compose.dev.yml up --build",
     "docker:stop:dev": "docker-compose -f docker-compose.dev.yml down -v",
-    "docker:build:prod": "docker-compose -f docker-compose.prod.yml build",
-    "docker:start:prod": "docker run -p 80:80 --name my-react-app app-prod",
-    "docker:stop:prod": "docker stop my-react-app && docker ps -q --filter ancestor=my-react-app",
+    "docker:start:prod": "docker-compose -f docker-compose.prod.yml up --build",
+    "docker:stop:prod": "docker-compose -f docker-compose.prod.yml down -v",
     "start": "vite",
     "start:host": "vite --host",
     "build": "tsc --project tsconfig.prod.json && vite build --outDir ./dist",
