--- a/docker/dev/dockerfile.app.dev
+++ b/docker/dev/dockerfile.app.dev
@@ -12,6 +12,6 @@ RUN pnpm install
 # Copy app files
 COPY . .
 # Expose port
-EXPOSE 3000
+# EXPOSE 3000
 # Start the app
 CMD ["pnpm", "start:host"]
