--- a/docker/prod/dockerfile.app.prod
+++ b/docker/prod/dockerfile.app.prod
@@ -54,15 +54,15 @@ ENV NODE_ENV production
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Add your nginx.conf
-COPY ./docker/prod/http_server/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+#COPY ./docker/prod/http_server/nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy SSL Key and cert and SSL config
-#COPY ./docker/prod/http_server/nginx/https_nginx.conf /etc/nginx/conf.d/default.conf
-#COPY ./docker/prod/http_server/nginx/ssl/self-signed-ssl-cert.crt /etc/nginx/ssl/self-signed-ssl-cert.crt
-#COPY ./docker/prod/http_server/nginx/ssl/self-signed-ssl-key.key /etc/nginx/ssl/self-signed-ssl-key.key
+COPY ./docker/prod/http_server/nginx/https_nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./docker/prod/http_server/nginx/ssl/self-signed-ssl-cert.crt /etc/nginx/ssl/self-signed-ssl-cert.crt
+COPY ./docker/prod/http_server/nginx/ssl/self-signed-ssl-key.key /etc/nginx/ssl/self-signed-ssl-key.key
 
 # Expose port
-EXPOSE 80
+#EXPOSE 80
 
 # Expose SSL
 #EXPOSE 443
